# aliexpress-async-api

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  PUBLISHING_AUTOMATION_PLAN.md  PUSH_CHECKLIST.md  QUICK_START.md  README.md  pyproject.toml  setup.cfg
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: auto-pr.yml  autoformat.yml  publish.yml  tests.yml
aliexpress_async_api/: __init__.py  auth.py  client.py  exceptions.py  models.py
aliexpress_async_api/auth/: __init__.py  oauth.py  signature.py
aliexpress_async_api/endpoints/: __init__.py  affiliates.py  auth.py  base.py  business.py  categories.py  orders.py  products.py  shipping.py
aliexpress_async_api/models/: __init__.py  affiliate.py  base.py  category.py  order.py  product.py  shipping.py  token.py
aliexpress_async_api/utils/: __init__.py  logging.py  rate_limiter.py  retry.py  webhooks.py
docs/: ARCHITECTURE.md
scripts/: bump_version.py  finalize_changelog.py  generate_changelog.py
tests/: conftest.py  test_advanced_features.py  test_affiliate.py  test_auth_oauth.py  test_auth_signature.py  test_client_integration.py  test_endpoints_coverage.py  test_endpoints_modules.py  test_endpoints_orders.py  test_endpoints_products.py  test_models_base.py  test_remaining_endpoints.py
