[build-system]
requires = ["setuptools>=61.0,<69.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aliexpress-async-api"
version = "1.0.1"
authors = [
  { name="OfertaChina", email="contato@ofertachina.com.br" },
]
description = "Modern and asynchronous Python client for the AliExpress Open Platform (IOP) Affiliate API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ils15/aliexpress-async-api"
"Bug Tracker" = "https://github.com/ils15/aliexpress-async-api/issues"
"Contact" = "https://ofertachina.com.br/contato"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
